# llvm-project

clang-tools-extra/docs/: ReleaseNotes.rst
clang/docs/: ClangCommandLineReference.rst  ReleaseNotes.rst
clang/include/clang/Basic/: DiagnosticDriverKinds.td
clang/include/clang/Driver/: Options.td
clang/lib/Analysis/plugins/: CMakeLists.txt
clang/lib/Analysis/plugins/CheckerArrayBound/: ArrayBoundChecker.cpp  CMakeLists.txt
clang/lib/Analysis/plugins/CheckerDivZero/: CMakeLists.txt  DivZeroChecker.cpp
clang/lib/Analysis/plugins/CheckerMainCall/: CMakeLists.txt  MainCallChecker.cpp
clang/lib/Analysis/plugins/CheckerMalloc/: CMakeLists.txt  MallocChecker.cpp
clang/lib/Analysis/plugins/CheckerSimpleStream/: CMakeLists.txt  SimpleStreamChecker.cpp
clang/lib/Basic/: LangOptions.cpp
clang/lib/Driver/ToolChains/: Clang.cpp
clang/lib/Lex/: Preprocessor.cpp
clang/test/Lexer/: conflict-marker.c
compiler-rt/: CMakeLists.txt
compiler-rt/lib/profile/: InstrProfilingFile.c
libcxx/docs/: ReleaseNotes.rst  index.rst
libcxx/include/: ranges
lld/ELF/: Driver.cpp
lld/docs/: ReleaseNotes.rst
llvm/: CMakeLists.txt
llvm/docs/: ReleaseNotes.rst
llvm/include/llvm/: InitializePasses.h  LinkAllPasses.h
llvm/lib/Analysis/: AliasAnalysis.cpp  Analysis.cpp  CMakeLists.txt  EverythingMustAlias.cpp  ScalarEvolution.cpp  ScalarEvolutionAliasAnalysis.cpp
llvm/lib/Passes/: CMakeLists.txt  PassBuilder.cpp  PassRegistry.def
llvm/lib/Support/: Triple.cpp
llvm/lib/Transforms/: CMakeLists.txt
openmp/runtime/src/: kmp_tasking.cpp
(+37 files in other folders)
