if(CLANG_ENABLE_STATIC_ANALYZER AND LLVM_ENABLE_PLUGINS)
  add_subdirectory(SampleAnalyzer)
  add_subdirectory(CheckerDependencyHandling)
  add_subdirectory(CheckerOptionHandling)
  add_subdirectory(CheckerMainCall)
  add_subdirectory(CheckerDivZero)
  add_subdirectory(CheckerSimpleStream)
  add_subdirectory(CheckerMalloc)
  add_subdirectory(CheckerArrayBound)
endif()
